[NEW] Pytest logging prints

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
 addopts =
+    # Show the prints
+    -s
     # show tests that (f)ailed, (E)rror, or (X)passed summary
     -rfEX
     # Make tracebacks shorter
