--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,16 +30,11 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
 
-        # Install the package using the setup.py
+        # Install the packages
       - name: Install package
-        run: python setup.py install
+        run: python3 -m pip install -r requirements.txt
 
-        # Install pytest (you can use some other testing utility)
-      - name: Install pytest
-        run: |
-          python3 -m pip install -r requirements.txt
-
-        # Run the tests. I'm using pytest and the file is in the tests directory.
+        # Run the tests. 
       - name: Run tests
         run: 
           python3 -m pytest tests
