--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Run Tests
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
   
   pull_request:
     branches: [main]
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     
     steps:
         # Checkout the latest code from the repo
