--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,6 +2,7 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
+      - id: requirements-txt-fixer          # Sorts requirements
       - id: end-of-file-fixer               # Add empty string end of each file
       - id: trailing-whitespace             # Remove extra whitespaces
       - id: check-added-large-files         # Check we do not commit vast large files
@@ -22,6 +23,10 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
+  - repo: https://github.com/pre-commit/mirrors-autopep8
+    rev: v1.4.4  # Use the sha / tag you want to point at
+    hooks:
+    -   id: autopep8
   - repo: https://github.com/PyCQA/flake8
     rev: 6.0.0
     hooks:
