--- a/pytest.ini
+++ b/pytest.ini
@@ -10,6 +10,8 @@ addopts =
     -Wd
     --ignore=test/test_datasets_download.py
     --ignore-glob=test/test_prototype_*.py
+    # Run tests that failed first last time (failed first)
+    -ff
 testpaths =
     test
 xfail_strict = True
