--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# External dependencies
 pandas==1.5.0
 pre-commit==2.21.0
 pydantic==1.10.2
@@ -8,4 +9,12 @@ torchaudio==0.13.1
 torchsummary==1.5.1
 torchvision==0.14.1
 transformers==4.25.1
+
+# Formatting & Linting
+black
+isort
+mypy
+flake8
+flake8-docstrings
+pylint
 # fastapi, alembic
