[FIX] Test paths

--- a/pytest.ini
+++ b/pytest.ini
@@ -13,5 +13,5 @@ addopts =
     # Run tests that failed first last time (failed first)
     -ff
 testpaths =
-    test
+    tests
 xfail_strict = True
