--- a/.github/workflows/ci_python_version.yml
+++ b/.github/workflows/ci_python_version.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: CI cross-Python version
 
 on:
   push:
@@ -12,8 +12,9 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.9', '3.10'] # ['3.7', '3.8', '3.9', '3.10']
 
     steps:
         # Checkout the latest code from the repo
@@ -22,7 +23,7 @@ jobs:
 
         # Setup which version of Python to use
       - name: Set Up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
